plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'id.co'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2024.0.0")
}

dependencies {
	dependencies {
		// Core Spring Boot Dependencies
		implementation 'org.springframework.boot:spring-boot-starter'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-webflux'
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
		implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
		implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.3.1'

        // Redis Dependencies
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.4'


        implementation 'org.springframework.boot:spring-boot-starter-websocket'



        implementation 'org.springframework.cloud:spring-cloud-stream'
		implementation 'org.springframework.kafka:spring-kafka'

		implementation 'org.postgresql:postgresql:42.6.0'
		implementation 'org.json:json:20210307'
		implementation 'commons-codec:commons-codec:1.16.1'

		implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

		implementation 'org.ta4j:ta4j-core:0.15'

		// Logging
		implementation 'org.springframework.boot:spring-boot-starter-logging'

		// Lombok
		implementation 'org.projectlombok:lombok:1.18.32'
		annotationProcessor 'org.projectlombok:lombok:1.18.32'
		testCompileOnly 'org.projectlombok:lombok:1.18.32'
		testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

		// Testing
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.springframework.security:spring-security-test'
		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
		testImplementation 'org.testcontainers:testcontainers:1.19.0'
		testImplementation 'org.testcontainers:junit-jupiter:1.19.0'
		testImplementation 'org.mockito:mockito-core'

		// SpringDoc OpenAPI
		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	}


}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
